# Chorus

./: .gitignore  CLAUDE.md  LICENSE  README.md  chorus_cli.py  chorus_recall.py  chorus_server.py  cli.py  config.py  opencode.json  pyproject.toml  setup_mcp.sh
chorus/: __init__.py  __main__.py  agents.py  cli.py  conductor.py  config.py  memory.py  models.py  orchestrator.py  repl.py
chorus/mcp_servers/: chorus_server.py  claude_server.py  codex_server.py  copilot_server.py  gemini_server.py  memory_server.py  orchestra_server.py
chorus/providers/: __init__.py  base.py  claude_cli.py  codex_cli.py  copilot_cli.py  gemini_cli.py
tests/: test_chorus_cli.py  test_chorus_server.py  test_cli_run.py
