[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorus-ai"
version = "0.2.0"
description = "Multi-LLM orchestration via MCP. Your AI models, working together."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["chorus"]
