[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chorus"
version = "0.3.0"
description = "Multi-LLM orchestration via MCP. Your AI models, working together."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0.0",
]

[project.scripts]
chorus = "chorus_cli:main"
